# grpc_bench

./: .gitignore  Dockerfile  README.md  gen_proto.sh  go.mod
certs/: ca_cert.pem  ca_key.pem  client_ca_cert.pem  client_ca_key.pem  client_cert.pem  client_key.pem  server_cert.pem  server_key.pem
client/: README.md  main.go
cpp-flight/: CMakeLists.txt  client.cc
cpp-grpc/: CMakeLists.txt  README.md  client.cc  common.h  server.cc
dataservice/: dataservice_grpc.pb.go
go/: go.mod  go.sum
go-arrow/: go.mod  go.sum
go-arrow/server/: main.go
go-grpc/dataservice/: dataservice.pb.go  dataservice.proto  dataservice_grpc.pb.go
go/client/: main.go
go/server/: main.go
proto/: dataservice.proto
protos/dataservice/: dataservice.proto
python/: client.py  server.py
python-arrow/: client.py  server.py
python-grpc/: client.py  server.py
scripts/: gen_certs.sh  gen_proto.sh
server/: main.go
src/cpp/flight/: server.cc
src/cpp/grpc/: CMakeLists.txt  README.md  client.cc  server.cc
src/go/flight/server/: main.go
src/go/grpc/client/: main.go
src/python/flight/: client.py  server.py
